Crash on closing while frameserver rendering #50676

Closed
opened 2017-02-14 02:23:48 +01:00 by Aaron Carlisle · 6 comments
Member

System Information
Windows 10
Intel HD 4600

Blender Version
Broken: 5552e83
Worked: (optional)

Short description of error
Blender crashes when closing while rendering with the output set to frame server.

Exact steps for others to reproduce the error

  • Set render output to frame server
  • Render animation
  • close blender
  • look at the terminal to see that it crashed and did not simply close
**System Information** Windows 10 Intel HD 4600 **Blender Version** Broken: 5552e83 Worked: (optional) **Short description of error** Blender crashes when closing while rendering with the output set to frame server. **Exact steps for others to reproduce the error** - Set render output to frame server - Render animation - close blender - look at the terminal to see that it crashed and did not simply close
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

I remember looking into this, the problem was audaspace is being shutdown on the mainthread, but then the render thread does a audaspace call anyhow, null-refs and takes down the process.

I remember looking into this, the problem was audaspace is being shutdown on the mainthread, but then the render thread does a audaspace call anyhow, null-refs and takes down the process.

This issue was referenced by 9062c086b4

This issue was referenced by 9062c086b481ee9f1307f6e2688d822a1166d805

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2017-02-24 15:01:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50676
No description provided.